# my-oci-toolkit

./: .env.example  LICENSE  PROJECT_BLUEPRINT.md  README.md  actions.json  myoci.py  pyproject.toml
my_oci/: cli.py  constants.py  core.py
my_oci/templates/: common_schemas.yaml  oci_compute_instance_launch.yaml  oci_network_vcn_list.yaml
prompts/: critic.md  rebuild.md
templates/: common_schemas.yaml  oci_compute_instance_list.yaml  oci_events_rule_create.yaml
