# pyproject.toml
[project]
name = "myoci-toolkit"
version = "2.0.0"
description = "A personal SRE architect for the OCI CLI, focused on reliability and safety."
authors = [{ name = "Elena SRE", email = "elena@example.com" }]
requires-python = ">=3.9"
dependencies = [
    "typer[all]",
    "python-dotenv",
    "rich",
    "PyYAML",
    "jsonschema",
]

[project.scripts]
myoci = "my_oci.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
